--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Este es un sitio web con Github Pages</h1>
 <p>Y fue creado con amor para el curso de Git y Github de Platzi</p>
-<p><img src="https://i.imgur.com/sfqjVlb.mp4"/></p>
+<p><img src="https://media.giphy.com/media/13kajTax0GCg0g/giphy.gif"/></p>
